# ResumeMatch

./: CONTRIBUTING.md  INSTALL.md  MANIFEST.in  PACKAGE_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: set-topics.yml
examples/: basic_usage.py  library_usage.py
src/resumematch/: __init__.py
src/resumematch/core/: __init__.py  analyzer.py
src/resumematch/matcher/: __init__.py  resume_matcher.py
src/resumematch/parser/: __init__.py  resume_parser.py
src/resumematch/utils/: __init__.py  file_utils.py  text_utils.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_analyzer.py  test_matcher.py  test_parser.py  test_utils.py
